// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures [api-extractor] should run for api-extractor 1`] = `
"<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](https://home.com) &gt; [test-lib](./your-lib)

## test-lib package

## Functions

|  Function | Description |
|  --- | --- |
|  [beginWork()](./your-lib-beginwork) | The function that begins work |
|  [endWork()](./your-lib-endwork) | The function that ends work |

"
`;

exports[`fixtures [api-extractor] should run for api-extractor 2`] = `
"<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](https://home.com) &gt; [test-lib](./your-lib) &gt; [beginWork](./your-lib-beginwork)

## beginWork() function

The function that begins work

<b>Signature:</b>

\`\`\`typescript
export declare function beginWork(): void;
\`\`\`
<b>Returns:</b>

void

"
`;

exports[`fixtures [api-extractor] should run for api-extractor 3`] = `
"<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](https://home.com) &gt; [test-lib](./your-lib) &gt; [endWork](./your-lib-endwork)

## endWork() function

The function that ends work

<b>Signature:</b>

\`\`\`typescript
export declare function endWork(): void;
\`\`\`
<b>Returns:</b>

void

"
`;

exports[`fixtures [xmldoc] should run for xmldoc 1`] = `
"# test-lib assembly

## test_lib namespace

| public type | description |
| --- | --- |
| class [Program](./your-lib-program) | Program entrypoint |

<!-- DO NOT EDIT: generated by xmldocmd for test-lib.dll -->
"
`;

exports[`fixtures [xmldoc] should run for xmldoc 2`] = `
"# Program class

Program entrypoint

\`\`\`csharp
public class Program
\`\`\`

## Public Members

| name | description |
| --- | --- |
| [Program](./your-lib-program-program)() | The default constructor. |
| static [BeginWork](./your-lib-program-beginwork)() | Begins the work |
| static [EndWork](./your-lib-program-endwork)() | Ends the work |
| static [Main](./your-lib-program-main)(…) | The entrypoint |

## See Also

* namespace [test_lib](./your-lib)

<!-- DO NOT EDIT: generated by xmldocmd for test-lib.dll -->
"
`;

exports[`fixtures [xmldoc] should run for xmldoc 3`] = `
"# Program.BeginWork method

Begins the work

\`\`\`csharp
public static void BeginWork()
\`\`\`

## See Also

* class [Program](./your-lib-program)
* namespace [test_lib](./your-lib)

<!-- DO NOT EDIT: generated by xmldocmd for test-lib.dll -->
"
`;

exports[`fixtures [xmldoc] should run for xmldoc 4`] = `
"# Program.EndWork method

Ends the work

\`\`\`csharp
public static void EndWork()
\`\`\`

## See Also

* class [Program](./your-lib-program)
* namespace [test_lib](./your-lib)

<!-- DO NOT EDIT: generated by xmldocmd for test-lib.dll -->
"
`;

exports[`fixtures [xmldoc] should run for xmldoc 5`] = `
"# Program.Main method

The entrypoint

\`\`\`csharp
public static void Main(string[] args)
\`\`\`

| parameter | description |
| --- | --- |
| args | arguments |

## See Also

* class [Program](./your-lib-program)
* namespace [test_lib](./your-lib)

<!-- DO NOT EDIT: generated by xmldocmd for test-lib.dll -->
"
`;

exports[`fixtures [xmldoc] should run for xmldoc 6`] = `
"# Program constructor

The default constructor.

\`\`\`csharp
public Program()
\`\`\`

## See Also

* class [Program](./your-lib-program)
* namespace [test_lib](./your-lib)

<!-- DO NOT EDIT: generated by xmldocmd for test-lib.dll -->
"
`;
